METAMODEL-1147: Created controller models with swagger-codegen
